syntax = "proto3";

option csharp_namespace = "GrpcTesting";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package orders;

service Orders {
  rpc GetOrders (OrdersRequest) returns (OrdersReply);
}

message OrdersRequest { }

//Список моделей заказов
message OrdersReply {
  repeated OrderReply orders = 1;
}

// Модель заказа
message OrderReply {
  int32 order_id = 1;
  google.protobuf.Int32Value employee_id = 2;
  google.protobuf.StringValue customer_id = 3;
  google.protobuf.StringValue order_date = 4;
  google.protobuf.StringValue required_date = 5;
  google.protobuf.StringValue shipped_date = 6;
  google.protobuf.Int32Value ship_via = 7;
  google.protobuf.StringValue freight = 8;
  google.protobuf.StringValue ship_name = 9;
  google.protobuf.StringValue ship_address = 10;
  google.protobuf.StringValue ship_city = 11;
  google.protobuf.StringValue ship_region = 12;
  google.protobuf.StringValue ship_postal_code = 13;
  google.protobuf.StringValue ship_country = 14;
}
